// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composant Accordion > Snapshots > devrait correspondre au snapshot avec des classes personnalisées 1`] = `
<div>
  <div
    class="px-2 w-full rounded-md"
    data-collection="react-aria-:ra:"
    data-orientation="vertical"
  >
    <div
      class="w-full shadow-none custom-base-class"
      data-slot="base"
    >
      <h2
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-slot="trigger"
          id=":rb:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-lg font-semibold custom-title-class"
              data-slot="title"
            >
              Premier élément
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <hr
      class="shrink-0 bg-divider border-none w-full h-divider"
      role="separator"
    />
    <div
      class="w-full shadow-none custom-base-class"
      data-slot="base"
    >
      <h2
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-slot="trigger"
          id=":rd:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-lg font-semibold custom-title-class"
              data-slot="title"
            >
              Deuxième élément
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Composant Accordion > Snapshots > devrait correspondre au snapshot avec la variante 'splitted' 1`] = `
<div>
  <div
    class="px-2 flex flex-col gap-2 w-full rounded-md"
    data-collection="react-aria-:r5:"
    data-orientation="vertical"
  >
    <div
      class="px-4 w-full shadow-none bg-white dark:bg-content1 border-1 border-border rounded-md"
      data-slot="base"
    >
      <h2
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-slot="trigger"
          id=":r6:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-lg font-semibold"
              data-slot="title"
            >
              Premier élément
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <div
      class="px-4 w-full shadow-none bg-white dark:bg-content1 border-1 border-border rounded-md"
      data-slot="base"
    >
      <h2
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-slot="trigger"
          id=":r8:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-lg font-semibold"
              data-slot="title"
            >
              Deuxième élément
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Composant Accordion > Snapshots > devrait correspondre au snapshot avec le mode de sélection multiple 1`] = `
<div>
  <div
    class="px-2 w-full rounded-md"
    data-collection="react-aria-:rf:"
    data-orientation="vertical"
    data-selection-mode="multiple"
  >
    <div
      class="w-full shadow-none"
      data-slot="base"
    >
      <h2
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-slot="trigger"
          id=":rg:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-lg font-semibold"
              data-slot="title"
            >
              Premier élément
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <hr
      class="shrink-0 bg-divider border-none w-full h-divider"
      role="separator"
    />
    <div
      class="w-full shadow-none"
      data-slot="base"
    >
      <h2
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-slot="trigger"
          id=":ri:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-lg font-semibold"
              data-slot="title"
            >
              Deuxième élément
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Composant Accordion > Snapshots > devrait correspondre au snapshot avec les éléments par défaut 1`] = `
<div>
  <div
    class="px-2 w-full rounded-md"
    data-collection="react-aria-:r0:"
    data-orientation="vertical"
  >
    <div
      class="w-full shadow-none"
      data-slot="base"
    >
      <h2
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-slot="trigger"
          id=":r1:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-lg font-semibold"
              data-slot="title"
            >
              Premier élément
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
    <hr
      class="shrink-0 bg-divider border-none w-full h-divider"
      role="separator"
    />
    <div
      class="w-full shadow-none"
      data-slot="base"
    >
      <h2
        data-slot="heading"
      >
        <button
          aria-expanded="false"
          class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
          data-slot="trigger"
          id=":r3:"
          tabindex="0"
          type="button"
        >
          <div
            class="flex-1 flex flex-col text-start"
          >
            <span
              class="text-foreground text-lg font-semibold"
              data-slot="title"
            >
              Deuxième élément
            </span>
          </div>
          <span
            aria-hidden="true"
            class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            data-slot="indicator"
          >
            <svg
              aria-hidden="true"
              fill="none"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </span>
        </button>
      </h2>
    </div>
  </div>
</div>
`;

exports[`Composant Accordion > Snapshots > devrait correspondre au snapshot avec un tableau d'éléments vide 1`] = `
<div>
  <div
    class="px-2 w-full rounded-md"
    data-collection="react-aria-:rk:"
    data-orientation="vertical"
  />
</div>
`;
